# antenna

./: Cargo.toml  Justfile  README.md  antenna.yml  rustfmt.toml
.github/workflows/: verify.yml
crates/cli/: Cargo.toml  README.md  rust-toolchain.toml
crates/cli/site/: .gitignore  README.md  biome.json  bun.lockb  index.html  package.json  tailwind.config.js
crates/cli/site/src/: index.ts  root.svelte
crates/cli/site/src/components/: query_card.svelte
crates/lib/: Cargo.toml  README.md  rustfmt.toml
crates/lib/src/: lib.rs
src/: args.rs  configuration.rs  csv.rs  lib.rs  main.rs  out.rs
src/process/: index.rs  mod.rs  time.rs
