[package]
name = "antenna"
version = "0.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = [
    "c1m50c <58411864+c1m50c@users.noreply.github.com>"
]

[dependencies]
tree-sitter = "0.20.10"
tree-sitter-rust = { version = "0.20.4", optional = true }

[features]
rust = [ "dep:tree-sitter-rust" ]
