[package]
name = "antenna"
version = "0.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = [
    "c1m50c <58411864+c1m50c@users.noreply.github.com>"
]

[dependencies]
clap = { version = "4.4.11", features = ["env", "derive"] }
glob = "0.3.1"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
thiserror = "1.0.51"
tree-sitter = "0.20.10"
tree-sitter-rust = { version = "0.20.4", optional = true }

[features]
rust = [ "dep:tree-sitter-rust" ]
