[package]
name = "antenna"
description = "Tooling for repository analysis."
version = "0.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = [
    "c1m50c <58411864+c1m50c@users.noreply.github.com>"
]

[dependencies]
clap = { version = "4.4.11", features = ["env", "derive", "cargo"] }
csv = "1.3.0"
git2 = "0.18.1"
glob = "0.3.1"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
thiserror = "1.0.51"
tree-sitter = "0.20.10"
tree-sitter-c = { version = "0.20.6", optional = true }
tree-sitter-c-sharp = { version = "0.20.0", optional = true }
tree-sitter-cpp = { version = "0.20.3", optional = true }
tree-sitter-css = { version = "0.20.0", optional = true }
tree-sitter-go = { version = "0.20.0", optional = true }
tree-sitter-html = { version = "0.19.0", optional = true }
tree-sitter-java = { version = "0.20.2", optional = true }
tree-sitter-javascript = { version = "0.20.1", optional = true }
tree-sitter-json = { version = "0.20.1", optional = true }
tree-sitter-python = { version = "0.20.4", optional = true }
tree-sitter-ruby = { version = "0.20.0", optional = true }
tree-sitter-rust = { version = "0.20.4", optional = true }
tree-sitter-swift = { version = "0.3.6", optional = true }
tree-sitter-toml = { version = "0.20.0", optional = true }
tree-sitter-typescript = { version = "0.20.3", optional = true }
tree-sitter-yaml = { version = "0.0.1", optional = true }

[build-dependencies]
cc="*"

[features]
web = ["typescript", "javascript", "html", "css", "json"]
rust = [ "dep:tree-sitter-rust" ]
python = ["dep:tree-sitter-python"]
typescript = ["dep:tree-sitter-typescript"]
javascript = ["dep:tree-sitter-javascript"]
go = ["dep:tree-sitter-go"]
cpp = ["dep:tree-sitter-cpp"]
java = ["dep:tree-sitter-java"]
c = ["dep:tree-sitter-c"]
ruby = ["dep:tree-sitter-ruby"]
html = ["dep:tree-sitter-html"]
swift = ["dep:tree-sitter-swift"]
c-sharp = ["dep:tree-sitter-c-sharp"]
css = ["dep:tree-sitter-css"]
json = ["dep:tree-sitter-json"]
toml = ["dep:tree-sitter-toml"]
yaml = ["dep:tree-sitter-yaml"]
