[package]
name = "antenna-cli"
description = "Tooling for repository analysis."
version = "0.0.0"
edition = "2021"
license = "MIT"
readme = "../../README.md"
authors = [
    "c1m50c <58411864+c1m50c@users.noreply.github.com>"
]

[dependencies]
clap = { version = "4.4.11", features = ["env", "derive", "cargo"] }
antenna = { path = "../lib" }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }
csv = { workspace = true }

[[bin]]
path = "src/main.rs"
name = "antenna"